@@ -1,4 +1,4 @@
-/* $Header: /data/zender/nco_20150216/nco/src/nco/ncra.c,v 1.508 2014-02-12 01:09:05 pvicente Exp $ */
+/* $Header: /data/zender/nco_20150216/nco/src/nco/ncra.c,v 1.509 2014-02-13 03:21:49 zender Exp $ */
 
 /* This single source file compiles into three separate executables:
    ncra -- netCDF record averager
@@ -137,8 +137,8 @@ main(int argc,char **argv)
   char *sng_cnv_rcd=NULL_CEWI; /* [sng] strtol()/strtoul() return code */
   char trv_pth[]="/"; /* [sng] Root path of traversal tree */
 
-  const char * const CVS_Id="$Id: ncra.c,v 1.508 2014-02-12 01:09:05 pvicente Exp $"; 
-  const char * const CVS_Revision="$Revision: 1.508 $";
+  const char * const CVS_Id="$Id: ncra.c,v 1.509 2014-02-13 03:21:49 zender Exp $"; 
+  const char * const CVS_Revision="$Revision: 1.509 $";
   const char * const opt_sht_lst="3467ACcD:d:FG:g:HhL:l:n:Oo:p:P:rRt:v:X:xY:y:-:";
 
   cnk_sct cnk; /* [sct] Chunking structure */
@@ -717,29 +717,24 @@ main(int argc,char **argv)
   (void)nco_set_fill(out_id,NC_NOFILL,&fll_md_old);
 
   /* Add cell_methods attributes (before exiting define mode) */
-  if(nco_prg_id == ncra ){
+  if(nco_prg_id == ncra){
     dmn_sct **dmn=NULL_CEWI;
     int nbr_dmn=nbr_rec;
     /* Allocate  */
     dmn=(dmn_sct **)nco_malloc(nbr_dmn*sizeof(dmn_sct *));
-    /* Make a dimension array from limit records array */
+    /* Make dimension array from limit records array */
     (void)nco_dmn_lmt(lmt_rec,nbr_dmn,&dmn);
-    /* Add cell_methods attributes (pass as dimension argument a records only array) */
+    /* Add cell_methods attributes (pass as dimension argument a records-only array) */
 #ifdef ENABLE_CELL_METHODS
     if(nco_dbg_lvl_get() >= nco_dbg_dev){
       (void)fprintf(stdout,"%s: DEBUG dimension list to nco_cnv_cf_cll_mth_add()\n",nco_prg_nm_get());
-      for(int idx=0;idx<nbr_dmn;idx++){
-        (void)fprintf(stdout,"%s: DEBUG %s\n",nco_prg_nm_get(),dmn[idx]->nm);
-      } 
-      for(int idx=0;idx<nbr_var_prc;idx++){
-        (void)fprintf(stdout,"%s: DEBUG %s\n",nco_prg_nm_get(),var_prc_out[idx]->nm_fll);
-      }   
-    }
+      for(idx=0;idx<nbr_dmn;idx++) (void)fprintf(stdout,"%s: DEBUG %s\n",nco_prg_nm_get(),dmn[idx]->nm);
+      for(idx=0;idx<nbr_var_prc;idx++) (void)fprintf(stdout,"%s: DEBUG %s\n",nco_prg_nm_get(),var_prc_out[idx]->nm_fll);
+    } /* endif dbg */
     rcd+=nco_cnv_cf_cll_mth_add(out_id,var_prc_out,nbr_var_prc,dmn,nbr_dmn,nco_op_typ,gpe,trv_tbl); 
 #endif
-    /* Free  */
     if(nbr_dmn > 0) dmn=nco_dmn_lst_free(dmn,nbr_dmn);
-  }
+  } /* !ncra */
 
   /* Take output file out of define mode */
   if(hdr_pad == 0UL){
