@@ -1,10 +1,13 @@
 2014-02-12  Charlie Zender  <zender@uci.edu>
 
 	* NCO 4.4.2 release procedure:
- 	Changes since nco-4_4_1: bugfixes for ncra.c memory, LLVM/clang builds, -X
+ 	Changes since nco-4_4_1: ncra.c mmr fix, LLVM/clang bld, -X, rx	nsx, cell_methods
 	cd ~/nco;cvs tag -d nco-4_4_2;cvs tag -d nco-4_4_2-1
 	cd ~/nco;cvs commit -m "Preparing nco-4.4.2 release"
 	cvs tag -c nco-4_4_2;cvs tag -c nco-4_4_2-1
+
+	* nco_var_rdc_[min|max|ttl]() copies first element of NC_CHAR and NC_STRING
+	Previously, these routines did nothing with those variable types
 
 	* Set only flg_mch (not flg_xtr) in nco_trv_rx_search()
 
